# belobog

./: .gitignore  Cargo.toml  Dockerfile  License.txt  Readme.md
crates/belobog/: Cargo.toml
crates/belobog-cli/: Cargo.toml
crates/belobog-cli/src/: main.rs
crates/belobog-fork/: Cargo.toml  build.rs  schema.graphql
crates/belobog-fork/src/: cache.rs  dump.rs  empty.rs  file.rs  fork.rs  graphql.rs  lib.rs  schema.rs  snapshot.rs  types.rs
crates/belobog-types/: Cargo.toml
crates/belobog-types/src/: error.rs  lib.rs  range.rs
crates/belobog/src/: build.rs  concolic.rs  const.rs  executor.rs  flash.rs  generate_bytecode.rs  input.rs  lib.rs  meta.rs  metrics.rs  mutation_utils.rs  object_sampler.rs  sched.rs  solver.rs  state.rs  type_utils.rs  utils.rs
crates/belobog/src/move/: mod.rs
crates/belobog/src/mutators/: arg.rs  basic.rs  havoc.rs  magic_number.rs  mod.rs  sequence.rs
crates/belobog/src/operations/: fuzz.rs  replay.rs
crates/belobog/src/oracles/: bool_judgement.rs  common.rs  infinite_loop.rs  mod.rs  overflow.rs  precision_loss.rs  proceeds.rs  type_conversion.rs  unchecked_return.rs  unused_const.rs  unused_private_fun.rs  unused_struct.rs
crates/belobog/test-data/fat_loop/: Move.toml
crates/belobog/test-data/fat_loop/sources/: fat_loop.move
crates/belobog/test-data/fat_loop/tests/: fat_loop_tests.move
crates/belobog/test-data/hello/: Move.toml
crates/belobog/test-data/hello/sources/: hello.move
crates/belobog/test-data/hello_dep/: Move.toml
crates/belobog/test-data/hello_dep/sources/: dep.move
crates/belobog/test-data/hello_dep/tests/: hello_dep_tests.move
crates/belobog/test-data/mole_oracle/: Move.toml
crates/belobog/test-data/mole_oracle/sources/: mole_oracle.move
crates/belobog/test-data/mole_oracle/tests/: mole_oracle_tests.move
crates/belobog/test-data/oracle-sets/: Move.toml
crates/belobog/test-data/oracle-sets/sources/: oracle_sets.move
crates/belobog/test-data/oracle-sets/tests/: precision_loss_tests.move
crates/belobog/test-data/overflow/: Move.toml
crates/belobog/test-data/overflow/sources/: overflow.move
crates/belobog/test-data/overflow/tests/: overflow_tests.move
crates/belobog/test-data/overflow_oracle/: Move.toml
crates/belobog/test-data/overflow_oracle/sources/: overflow_oracle.move
crates/belobog/test-data/overflow_oracle/tests/: overflow_oracle_tests.move
crates/belobog/test-data/transfer_vector/: 1.txt  Move.toml
crates/belobog/test-data/transfer_vector/sources/: transfer_vector.move
crates/belobog/test-data/transfer_vector/tests/: transfer_vector_tests.move
crates/belobog/test-data/variant/: Move.toml
crates/belobog/test-data/variant/sources/: variant.move
crates/belobog/test-data/variant/tests/: variant_tests.move
crates/belobog/test-data/vector_ref/: Move.toml
crates/belobog/test-data/vector_ref/sources/: vector_ref.move
crates/belobog/test-data/vector_ref/tests/: vector_ref_tests.move
move/belobog/: Move.toml
move/belobog/sources/: log.move  oracle.move
move/belobog/tests/: belobog_tests.move
