[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Ziqiao Kong <mio@lazym.io>"
]
license-file = "License.txt"
readme = "Readme.md"
description = "State-of-art move fuzz testing swiss knife"
homepage = "https://github.com/bitslab-risk/belobog"
repository = "https://github.com/bitslab-risk/belobog"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
log = "0.4"
env_logger = "0.11"
libafl = "0.15.3"
libafl_bolts = "0.15.3"
clap = { version = "4.5", features = ["derive", "env"]}
toml = "0.9.2"
color-eyre = "0.6"
serde_json = "1.0"
reqwest = "0.12.22"
itertools = "0.14.0"
axum = { version = "0.8.3", features = ["http2", "http1", "json", "macros"] }
jsonrpsee = { version = "0.25.1" }
anyhow = "1.0"
object_store = "0.11" # sui uses this!
byteorder = "1.5.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "204cd95e5a9f9a0d3d09c3c236dc5b2263c73fd3"} # sui use git dependency =/
bcs = "0.1"
tokio-stream = "0.1"
mdbx-derive = {version = "0.6.5"}
dotenvy = "0.15.7"
bincode = { version = "2.0", features = ["serde"] }
prometheus = "0.13.3"
auto_impl = "1.3.0"
cynic = { version = "3.10.0", features = ["http-reqwest"] } # sui use these two
scopeguard = "1.2.0"
rand_sui = {version = "0.8", package = "rand"} # Sui uses this =/
rand_libafl = {version = "0.9", package = "rand"}
rand_core_sui = {version = "0.6", package = "rand_core"}
rand_core_libafl = {version = "0.9", package = "rand_core"}
const-hex = "1.14.1"
serde_json_any_key = "2.0.0"
pprof = { version = "0.15" }
z3 = "0.16"
z3-sys = "0.9.10"
openai-models = {version = "0.3.8"}
agenty = {git = "https://github.com/wtdcode/agenty", branch = "master"}
tempdir = "0.3.7"
# cynic-codegen = "= 3.10.0"
chrono = "0.4.41"
rand = "0.9.2"

move-binary-format = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-trace-format = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-package = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-compiler = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-disassembler = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-ir-types = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-core-types = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-vm-types = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-vm-stack = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-vm-runtime = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed", features = ["tracing"]}
move-model = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
move-stackless-bytecode = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-move-build = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-json-rpc-types = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-types = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-package-management = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-sdk = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-config = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-storage = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-snapshot = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-core = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-replay-2 = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-execution = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}
sui-adapter-v2 = {git = "https://github.com/wtdcode/sui", branch = "sota-fullspeed"}

# move-binary-format = {path = "../sui/external-crates/move/crates/move-binary-format"}
# move-trace-format = {path = "../sui/external-crates/move/crates/move-trace-format"}
# move-package = {path = "../sui/external-crates/move/crates/move-package"}
# move-compiler = {path = "../sui/external-crates/move/crates/move-compiler"}
# move-disassembler = {path = "../sui/external-crates/move/crates/move-disassembler"}
# move-ir-types = {path = "../sui/external-crates/move/crates/move-ir-types"}
# move-core-types = {path = "../sui/external-crates/move/crates/move-core-types"}
# move-vm-types = {path = "../sui/external-crates/move/crates/move-vm-types"}
# move-vm-stack = {path = "../sui/external-crates/move/crates/move-vm-stack"}
# move-vm-runtime = {path = "../sui/external-crates/move/crates/move-vm-runtime", features = ["tracing"]}
# sui-move-build = {path = "../sui/crates/sui-move-build"}
# sui-json-rpc-types = {path = "../sui/crates/sui-json-rpc-types"}
# sui-types = {path = "../sui/crates/sui-types"}
# sui-package-management = {path = "../sui/crates/sui-package-management"}
# sui-sdk = {path = "../sui/crates/sui-sdk"}
# sui-config = {path = "../sui/crates/sui-config"}
# sui-storage = {path = "../sui/crates/sui-storage"}
# sui-snapshot = {path = "../sui/crates/sui-snapshot"}
# sui-core = {path = "../sui/crates/sui-core"}
# sui-replay-2 = {path = "../sui/crates/sui-replay-2"}
# sui-execution = {path = "../sui/sui-execution"}
# sui-adapter-v2 = {path = "../sui/sui-execution/v2/sui-adapter/"}

belobog = { version = "0.1.0", default-features = false, path = "crates/belobog"}
belobog-fork = { version = "0.1.0", default-features = false, path = "crates/belobog-fork"}
belobog-types = { version = "0.1.0", default-features = false, path = "crates/belobog-types"}
