[package]
name = "belobog-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror = {workspace = true}
color-eyre = {workspace = true}
serde_json = {workspace = true}
toml = {workspace = true}
bcs = {workspace = true}
reqwest = {workspace = true}
anyhow = {workspace = true}
object_store = {workspace = true}
mdbx-derive = {workspace = true}
fastcrypto = {workspace = true}
libafl = {workspace = true}
tokio = {workspace = true}

sui-sdk = {workspace = true}
sui-types = {workspace = true}
agenty.workspace = true
openai-models.workspace = true
move-binary-format = {workspace = true}