[package]
name = "belobog"
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}
clap = {workspace = true, features = ["derive", "env"]}
thiserror = {workspace = true}
color-eyre = {workspace = true}
libafl = { workspace = true }
libafl_bolts = { workspace = true }
serde_json = {workspace = true}
toml = {workspace = true}
log = {workspace = true}
reqwest = {workspace = true}
itertools = {workspace = true}
tokio = {workspace = true, features = ["full"]}
prometheus = {workspace = true}
scopeguard = {workspace = true}
rand_sui = { workspace = true }
rand_libafl = { workspace = true }
rand_core_sui = {workspace = true}
rand_core_libafl = {workspace = true}
fastcrypto = {workspace = true}
bcs = {workspace = true}
const-hex = {workspace = true}
serde_json_any_key = {workspace = true}
pprof = {workspace = true, optional = true, features = ["flamegraph"] }
z3 = {workspace = true}
z3-sys = {workspace = true}
anyhow = {workspace = true}
mdbx-derive = {workspace = true}

move-package = {workspace = true}
move-binary-format = {workspace = true}
move-compiler = {workspace = true}
move-disassembler = {workspace = true}
move-ir-types = {workspace = true}
move-trace-format = {workspace = true}
move-core-types = {workspace = true}
move-vm-types = {workspace = true}
move-vm-stack = { workspace = true}
move-vm-runtime = {workspace = true, features = ["tracing"]}
move-model = {workspace = true}
move-stackless-bytecode = {workspace = true}
sui-json-rpc-types = {workspace = true}
sui-types = {workspace = true}
sui-move-build = {workspace = true}
sui-package-management = { workspace = true }
sui-sdk = {workspace = true}
sui-execution = {workspace = true}
sui-adapter-v2 = {workspace = true}

belobog-fork = {workspace = true}
belobog-types = {workspace = true}

[dev-dependencies]
env_logger = {workspace = true}

[features]
default = ["input_display"]
input_display = []
pprof = ["dep:pprof"]